--- a/_posts/2016-10-22-go-mysql.md
+++ b/_posts/2016-10-22-go-mysql.md
@@ -4,8 +4,7 @@ title: go mysql 使用
 date: 2016-10-22 14:29:31
 category: 技术
 tags: Go
-keywords:
-description:
+excerpt: 总结了工作中go mysql的使用
 ---
 
 go mysql 使用总结
