--- a/_posts/2016-10-22-go-mysql.md
+++ b/_posts/2016-10-22-go-mysql.md
@@ -155,7 +155,9 @@ db.SetMaxOpenConns(maxOpenConns)
     }
 ```
 
-<font color="#8B0000">注意：</font>要在db执行成功后执行[rows.Close()](https://golang.org/pkg/database/sql/#Rows)（<font color="#8B0000">执行rows.Close()不会关闭长连接！</font>）
+<font color="#8B0000">注意：</font>
+要在db执行成功后执行[rows.Close()](https://golang.org/pkg/database/sql/#Rows)
+（<font color="#8B0000">执行rows.Close()不会关闭长连接！</font>）
 
 
 
