--- a/_posts/2016-1-17-SnowMan.md
+++ b/_posts/2016-1-17-SnowMan.md
@@ -76,8 +76,9 @@ excerpt: the detailed description of the same game - SnowMan……
 
 * 1、游戏在Unity Editor中运行正常，但打包成Apk包后PVP部分无法正常运行（怀疑是`System.Net.Sockets`存在问题）
 * 2、游戏ui尺寸存在问题，需要完善
-* 3、服务端设计不够健壮，容易crash
-* 4、不支持重连机制
+* 3、pvp对战模式设计不够完善，游戏退出存在问题
+* 4、服务端设计不够健壮，容易crash
+* 5、不支持重连机制
 
 ### 后续计划
 
@@ -104,3 +105,4 @@ excerpt: the detailed description of the same game - SnowMan……
 * http://blog.csdn.net/lisonglisonglisong/article/details/25071793
 * https://unity3d.com/cn/learn/tutorials/projects/survival-shooter/player-health
 * http://hahaya.github.io/use-protobuf-in-c-plus-plus/
+* [unity ui](http://www.cnblogs.com/Huil1993/p/5250371.html)
