--- a/_posts/2018-11-1-geohash.md
+++ b/_posts/2018-11-1-geohash.md
@@ -20,14 +20,14 @@ From [Wikipedia](https://en.wikipedia.org/wiki/Geohash):
 
 >The main usages of Geohashes are:
 
-* As a unique identifier.
-* To represent point data, e.g. in databases.
+>* As a unique identifier.
+>* To represent point data, e.g. in databases.
 
 > Geohashes have also been proposed to be used for geotagging.
 
 > When used in a database, the structure of geohashed data has two advantages. First, data indexed by geohash will have all points for a given rectangular area in contiguous slices (the number of slices depends on the precision required and the presence of geohash "fault lines"). This is especially useful in database systems where queries on a single index are much easier or faster than multiple-index queries. Second, this index structure can be used for a quick-and-dirty proximity search: the closest points are often among the closest geohashes.
 
-Now, we use geohash as cache of geographic location--GPS, which is used for a quick-and-dirty proximity search: the closest points are often among the closest geohashes.
+Now, we use geohash as cache of geographic location, which is used for a quick-and-dirty proximity search: the closest points are often among the closest geohashes.
 
 ### Geohash cache
 
