--- a/_posts/2018-11-1-bitmap.md
+++ b/_posts/2018-11-1-bitmap.md
@@ -104,3 +104,4 @@ getbit key 0
 
 * [详解redis的bitmap在亿级项目中的应用](https://blog.csdn.net/u011957758/article/details/74783347)
 * [An introduction to Redis data types and abstractions](https://redis.io/topics/data-types-intro#bitmaps)
+* [redis download](https://redis.io/download)
