--- a/_posts/2019-1-11-golang.md
+++ b/_posts/2019-1-11-golang.md
@@ -32,3 +32,19 @@ excerpt: Golang GC概述……
 ### 分代收集（generation）
 经过大量实际观察得知，在面向对象编程语言中，绝大多数对象的生命周期都非常短。分代收集的基本思想是，将堆划分为两个或多个称为 代（generation）的空间。新创建的对象存放在称为 新生代（young generation）中（一般来说，新生代的大小会比 老年代小很多），随着垃圾回收的重复执行，生命周期较长的对象会被 提升（promotion）到老年代中。因此，新生代垃圾回收和老年代垃圾回收两种不同的垃圾回收方式应运而生，分别用于对各自空间中的对象执行垃圾回收。新生代垃圾回收的速度非常快，比老年代快几个数量级，即使新生代垃圾回收的频率更高，执行效率也仍然比老年代垃圾回收强，这是因为大多数对象的生命周期都很短，根本无需提升到老年代
 
+## Golang各版本GC延迟及主要优化点
+
+数据来源自Twitter，参考[这里](https://blog.golang.org/ismmkeynote)
+
+* 1.4-1.5——300~400ms
+Prior to Go 1.5, Go has used a parallel stop-the-world (STW) collector.  While STW collection has many downsides, it does at least have predictable and controllable heap growth behavior
+* 1.5——30~40ms
+Go 1.5 introduces a concurrent collector. Go's new garbage collector is a concurrent, tri-color, mark-sweep collector
+* 1.6——0~50ms
+The improvement was largely due to systematically eliminating all the O(heap) things we were doing during the stop the world time
+* 1.7——0~5ms
+Again we kept knocking off these O(heap size) stop the world processes. We had much larger heaps and as we knocked off these O(heap size) stop the world pauses, the size of the heap could obviously grow considerable without impacting latency. So this was a bit of a help in 1.7.
+* 1.8-1.9——0~1.5ms
+We had the last of our large latency drops which was due to figuring out how to avoid the stop the world stack scanning at the end of the GC cycle. That dropped us into the sub-millisecond range. 
+
+
