--- a/_posts/2019-1-11-golang.md
+++ b/_posts/2019-1-11-golang.md
@@ -25,7 +25,7 @@ excerpt: Golang GC概述……
 * 频繁更新引用计数降低了性能。一种简单的解决方法就是编译器将相邻的引用计数更新操作合并到一次更新；还有一种方法是针对频繁发生的临时变量引用不进行计数，而是在引用达到0时通过扫描堆栈确认是否还有临时对象引用而决定是否释放等
 * 循环引用问题。当对象间发生循环引用时引用链中的对象都无法得到释放。最明显的解决办法是避免产生循环引用，如cocoa引入了strong指针和weak指针两种指针类型。或者系统检测循环引用并主动打破循环链。当然这也增加了垃圾回收的复杂度
 
-### 标记-清除（mark and sweep）
+### <font color=#DC143C>标记-清除（mark and sweep）</font>
 
 该方法分为两步，标记从根变量开始迭代遍历所有被引用的对象，对能够通过应用遍历访问到的对象都标记为“被引用”；标记完成后进行清除操作，对没有标记过的内存进行回收（回收同时可能伴有碎片整理操作）。这种方法解决了引用计数的不足，但是也有比较明显的问题：每次启动垃圾回收都会暂停当前所有的正常代码执行，回收使系统响应能力大大降低！当然后续也出现了很多mark&sweep算法的变种（如三色标记法）优化了这个问题
 
@@ -38,7 +38,7 @@ excerpt: Golang GC概述……
 
 * 1.4-1.5——300~400ms
 Prior to Go 1.5, Go has used a parallel stop-the-world (STW) collector.  While STW collection has many downsides, it does at least have predictable and controllable heap growth behavior
-* 1.5——30~40ms
+* <font color=#DC143C>1.5——30~40ms</font>
 Go 1.5 introduces a concurrent collector. Go's new garbage collector is a concurrent, tri-color, mark-sweep collector
 * 1.6——0~50ms
 The improvement was largely due to systematically eliminating all the O(heap) things we were doing during the stop the world time
