--- a/_posts/2019-1-11-golang.md
+++ b/_posts/2019-1-11-golang.md
@@ -51,4 +51,13 @@ Again we kept knocking off these O(heap size) stop the world processes. We had m
 * 1.8-1.9——0~1.5ms
 We had the last of our large latency drops which was due to figuring out how to avoid the stop the world stack scanning at the end of the GC cycle. That dropped us into the sub-millisecond range. 
 
+## Golang Garbage Collection Process
+
+Go uses a concurrent collector. Go's new garbage collector is a concurrent, tri-color, mark-sweep collector
+
+In a `tri-color` collector, every object is either white, grey, or black and we view the heap as a graph of connected objects. At the start of a GC cycle all objects are white. The GC visits all roots, which are objects directly accessible by the application such as globals and things on the stack, and colors these grey. The GC then chooses a grey object, blackens it, and then scans it for pointers to other objects. When this scan finds a pointer to a white object, it turns that object grey. This process repeats until there are no more grey objects. At this point, white objects are known to be unreachable and can be reused.
+
+And This Figure will show below the Process of Golang `Garbage Collection`
+
+![](/public/img/Golang/gc.png)
 
