--- a/_posts/2019-1-11-golang.md
+++ b/_posts/2019-1-11-golang.md
@@ -37,18 +37,23 @@ excerpt: Golang GC概述……
 数据来源自Twitter，参考[这里](https://blog.golang.org/ismmkeynote)
 
 * 1.4-1.5——300~400ms
+
 Prior to Go 1.5, Go has used a parallel stop-the-world (STW) collector.  While STW collection has many downsides, it does at least have predictable and controllable heap growth behavior
 
 * <font color="#dd0000">1.5——30~40ms</font><br />
+
 Go 1.5 introduces a concurrent collector. Go's new garbage collector is a concurrent, tri-color, mark-sweep collector
 
 * 1.6——0~50ms
+
 The improvement was largely due to systematically eliminating all the O(heap) things we were doing during the stop the world time
 
 * 1.7——0~5ms
-Again we kept knocking off these O(heap size) stop the world processes. We had much larger heaps and as we knocked off these O(heap size) stop the world pauses, the size of the heap could obviously grow considerable without impacting latency. So this was a bit of a help in 1.7.
+
+Again we kept knocking off these O(heap size) stop the world processes. We had much larger heaps and as we knocked off these O(heap size) stop the world pauses, the size of the heap could obviously grow considerable without impacting latency. So this was a bit of a help in 1.7
 
 * 1.8-1.9——0~1.5ms
+
 We had the last of our large latency drops which was due to figuring out how to avoid the stop the world stack scanning at the end of the GC cycle. That dropped us into the sub-millisecond range. 
 
 ## Golang Garbage Collection Process
