--- a/_posts/2019-1-11-golang.md
+++ b/_posts/2019-1-11-golang.md
@@ -60,9 +60,41 @@ We had the last of our large latency drops which was due to figuring out how to 
 
 Go uses a concurrent collector. Go's new garbage collector is a concurrent, tri-color, mark-sweep collector
 
-In a `tri-color` collector, every object is either white, grey, or black and we view the heap as a graph of connected objects. At the start of a GC cycle all objects are white. The GC visits all roots, which are objects directly accessible by the application such as globals and things on the stack, and colors these grey. The GC then chooses a grey object, blackens it, and then scans it for pointers to other objects. When this scan finds a pointer to a white object, it turns that object grey. This process repeats until there are no more grey objects. At this point, white objects are known to be unreachable and can be reused.
+<font color="#dd0000">In a `tri-color` collector, every object is either white, grey, or black and we view the heap as a graph of connected objects. At the start of a GC cycle all objects are white. The GC visits all roots, which are objects directly accessible by the application such as globals and things on the stack, and colors these grey. The GC then chooses a grey object, blackens it, and then scans it for pointers to other objects. When this scan finds a pointer to a white object, it turns that object grey. This process repeats until there are no more grey objects. At this point, white objects are known to be unreachable and can be reused.</font><br />
 
-And This Figure will show below the Process of Golang `Garbage Collection`
+And this figure will show below the Process of Golang `Garbage Collection`
 
 ![](/public/img/Golang/gc.png)
 
+An example of this process is shown below:
+
+* Stack scan
+
+stack->a->b——a为栈中申请的对象，b为堆中申请的对象，a对象中存在对b的引用
+
+stack->c——c也是栈中申请的对象
+
+* Mark
+
+这里a，c都会被标记为灰色；b为白色
+
+![](/public/img/Golang/process_1.png)
+
+由于是并发的mark，我们假设c先被处理，c没有引用其他对象，所以直接置黑，从队列中取出；此时c为黑色，a为灰色，b为白色
+
+假设这时用户做了如下操作：
+
+a=nil 
+new(d);
+c->b; 即，将a中对b的引用置为空（你也可以理解为将a中对其他任何内存对象的引用都清空）,随即申请d对象，然后在c中增加对b的引用。
+
+由于c已经是黑色，所以不会再去扫描他，那么本次内存扫描就不可能找得到b；而d对象由于刚申请出来，还没有被引用，所以这里只对a进行了mark：a：黑色，b：白色；c:黑色；d：白色
+
+这时用户又做了：
+b->d； 由于b无法被扫描到，这里显然d也不会被扫描到。 这样的状况会一直持续到这轮反复mark结束（即灰色队列为空）。
+
+stop the world， mark termination。 sweep。 整个GC结束， b，d的内存空间都是白色，所以在sweep时会被清理掉。如何避免这种误清理呢？
+
+写屏障的功能就是在 c->b发生时，对b标记为灰色，入队， 以及在b->d发生时，对d标记为灰色，入队，这样，在整个反复mark阶段结束时，我们能确保这段时间新发生的对白色对象的内存引用操作都被处理到（变黑），b和d就不会被误清理。写屏障在第一次扫描完，标记入队后，反复标记时开启写屏障， sweep前将写屏障关闭。
+
+简而言之，写屏障的作用大致是： 可以确保不会有对象A直接引用白色对象B（发生时将白色对象置灰）。这里有个小细节，go 1.5中不管对象A是什么颜色，只要他引用了对象B，就将B置灰
