--- a/_posts/2019-1-11-golang.md
+++ b/_posts/2019-1-11-golang.md
@@ -40,7 +40,7 @@ excerpt: Golang GC概述……
 
 Prior to Go 1.5, Go has used a parallel stop-the-world (STW) collector.  While STW collection has many downsides, it does at least have predictable and controllable heap growth behavior
 
-* <font color="#dd0000">1.5——30~40ms</font><br />
+* <font color="#dd0000">1.5——30~40ms</font>
 
 Go 1.5 introduces a concurrent collector. Go's new garbage collector is a concurrent, tri-color, mark-sweep collector
 
@@ -60,7 +60,7 @@ We had the last of our large latency drops which was due to figuring out how to 
 
 Go uses a concurrent collector. Go's new garbage collector is a concurrent, tri-color, mark-sweep collector
 
-<font color="#dd0000">In a `tri-color` collector, every object is either white, grey, or black and we view the heap as a graph of connected objects. At the start of a GC cycle all objects are white. The GC visits all roots, which are objects directly accessible by the application such as globals and things on the stack, and colors these grey. The GC then chooses a grey object, blackens it, and then scans it for pointers to other objects. When this scan finds a pointer to a white object, it turns that object grey. This process repeats until there are no more grey objects. At this point, white objects are known to be unreachable and can be reused.</font><br />
+<font color="#dd0000">In a `tri-color` collector, every object is either white, grey, or black and we view the heap as a graph of connected objects. At the start of a GC cycle all objects are white. The GC visits all roots, which are objects directly accessible by the application such as globals and things on the stack, and colors these grey. The GC then chooses a grey object, blackens it, and then scans it for pointers to other objects. When this scan finds a pointer to a white object, it turns that object grey. This process repeats until there are no more grey objects. At this point, white objects are known to be unreachable and can be reused.</font>
 
 And this figure will show below the Process of Golang `Garbage Collection`
 
@@ -81,6 +81,8 @@ stack->c——c也是栈中申请的对象
 ![](/public/img/Golang/process_1.png)
 
 由于是并发的mark，我们假设c先被处理，c没有引用其他对象，所以直接置黑，从队列中取出；此时c为黑色，a为灰色，b为白色
+
+![](/public/img/Golang/process_2.png)
 
 假设这时用户做了如下操作：
 
