--- a/_posts/2019-1-11-golang.md
+++ b/_posts/2019-1-11-golang.md
@@ -70,9 +70,9 @@ An example of this process is shown below:
 
 * Stack scan
 
-stack->a->b——a为栈中申请的对象，b为堆中申请的对象，a对象中存在对b的引用
+`stack->a->b`——a为栈中申请的对象，b为堆中申请的对象，a对象中存在对b的引用
 
-stack->c——c也是栈中申请的对象
+`stack->c`——c也是栈中申请的对象
 
 * Mark
 
@@ -86,17 +86,39 @@ stack->c——c也是栈中申请的对象
 
 假设这时用户做了如下操作：
 
-a=nil 
-new(d);
-c->b; 即，将a中对b的引用置为空（你也可以理解为将a中对其他任何内存对象的引用都清空）,随即申请d对象，然后在c中增加对b的引用。
+```
+a=nil
+new(d)
+c->b
+```
+
+也即，将a中对b的引用置为空（你也可以理解为将a中对其他任何内存对象的引用都清空），随即申请d对象，然后在c中增加对b的引用
 
 由于c已经是黑色，所以不会再去扫描他，那么本次内存扫描就不可能找得到b；而d对象由于刚申请出来，还没有被引用，所以这里只对a进行了mark：a：黑色，b：白色；c:黑色；d：白色
 
-这时用户又做了：
-b->d； 由于b无法被扫描到，这里显然d也不会被扫描到。 这样的状况会一直持续到这轮反复mark结束（即灰色队列为空）。
+![](/public/img/Golang/process_3.png)
 
-stop the world， mark termination。 sweep。 整个GC结束， b，d的内存空间都是白色，所以在sweep时会被清理掉。如何避免这种误清理呢？
+这时用户又做了如下操作：
 
-写屏障的功能就是在 c->b发生时，对b标记为灰色，入队， 以及在b->d发生时，对d标记为灰色，入队，这样，在整个反复mark阶段结束时，我们能确保这段时间新发生的对白色对象的内存引用操作都被处理到（变黑），b和d就不会被误清理。写屏障在第一次扫描完，标记入队后，反复标记时开启写屏障， sweep前将写屏障关闭。
+```
+b->d
+```
 
-简而言之，写屏障的作用大致是： 可以确保不会有对象A直接引用白色对象B（发生时将白色对象置灰）。这里有个小细节，go 1.5中不管对象A是什么颜色，只要他引用了对象B，就将B置灰
+由于b无法被扫描到，这里显然d也不会被扫描到。 这样的状况会一直持续到这轮反复mark结束（即灰色队列为空）
+
+stop the world， mark termination and sweep。 整个GC结束， b，d的内存空间都是白色，所以在sweep时会被清理掉。<font color="#dd0000">如何避免这种误清理呢？</font>
+
+写屏障(Write barrier)的功能就是在`c->b`发生时，对b标记为灰色，入队， 以及在b->d发生时，对d标记为灰色，入队，这样，在整个反复mark阶段结束时，我们能确保这段时间新发生的对白色对象的内存引用操作都被处理到（变黑），b和d就不会被误清理。写屏障在第一次扫描完，标记入队后，反复标记时开启写屏障， sweep前将写屏障关闭
+
+简而言之，写屏障的作用是：可以确保不会有对象A直接引用白色对象B（发生时将白色对象置灰）
+
+<font color="#dd0000">Attantion: `STW`过程目的是`Rescan globals/changed stacks`, 因为`mark`和用户程序是并行的，所以在上一步执行的时候可能会有新的对象分配，需要`Rescan`再完成检查</font>
+
+## Refs
+
+* [Go的三色标记GC](https://segmentfault.com/a/1190000012597428)
+* [Why do garbage collection? Won't it be too expensive?](https://golang.org/doc/faq#garbage_collection)
+* [Getting to Go: The Journey of Go's Garbage Collector](https://blog.golang.org/ismmkeynote)
+* [Golang GC 垃圾回收机制详解](https://blog.csdn.net/u010649766/article/details/80582153)
+* [Go 1.5 concurrent garbage collector pacing](https://docs.google.com/document/d/1wmjrocXIWTr1JxU-3EQBI6BK6KgtiFArkG47XK73xIQ/edit#heading=h.xy314pvxblbm)
+* [What kind of Garbage Collection does Go use?](https://stackoverflow.com/questions/7823725/what-kind-of-garbage-collection-does-go-use)
