--- a/_posts/2019-1-11-golang.md
+++ b/_posts/2019-1-11-golang.md
@@ -60,7 +60,7 @@ We had the last of our large latency drops which was due to figuring out how to 
 
 Go uses a concurrent collector. Go's new garbage collector is a concurrent, tri-color, mark-sweep collector
 
-<font color="#dd0000">In a `tri-color` collector, every object is either white, grey, or black and we view the heap as a graph of connected objects. At the start of a GC cycle all objects are white. The GC visits all roots, which are objects directly accessible by the application such as globals and things on the stack, and colors these grey. The GC then chooses a grey object, blackens it, and then scans it for pointers to other objects. When this scan finds a pointer to a white object, it turns that object grey. This process repeats until there are no more grey objects. At this point, white objects are known to be unreachable and can be reused.</font>
+> In a `tri-color` collector, every object is either white, grey, or black and we view the heap as a graph of connected objects. At the start of a GC cycle all objects are white. The GC visits all roots, which are objects directly accessible by the application such as globals and things on the stack, and colors these grey. The GC then chooses a grey object, blackens it, and then scans it for pointers to other objects. When this scan finds a pointer to a white object, it turns that object grey. This process repeats until there are no more grey objects. At this point, white objects are known to be unreachable and can be reused.
 
 And this figure will show below the Process of Golang `Garbage Collection`
 
@@ -112,7 +112,7 @@ stop the world， mark termination and sweep。 整个GC结束， b，d的内存
 
 简而言之，写屏障的作用是：可以确保不会有对象A直接引用白色对象B（发生时将白色对象置灰）
 
-<font color="#dd0000">Attantion: `STW`过程目的是`Rescan globals/changed stacks`, 因为`mark`和用户程序是并行的，所以在上一步执行的时候可能会有新的对象分配，需要`Rescan`再完成检查</font>
+<font color="#dd0000">Attantion: STW过程目的是Rescan globals/changed stacks, 因为mark和用户程序是并行的，所以在上一步执行的时候可能会有新的对象分配，需要Rescan再完成检查</font>
 
 ## Refs
 
