--- a/_posts/2019-1-11-golang.md
+++ b/_posts/2019-1-11-golang.md
@@ -3,7 +3,7 @@ layout: post
 title: Golang Garbage Collection
 date: 2019-1-11 16:33:31
 category: 技术
-tags: 业务开发, Go
+tags: 业务开发 Go
 excerpt: Golang GC概述……
 ---
 
