--- a/_posts/2019-1-11-golang.md
+++ b/_posts/2019-1-11-golang.md
@@ -122,3 +122,4 @@ stop the world， mark termination and sweep。 整个GC结束， b，d的内存
 * [Golang GC 垃圾回收机制详解](https://blog.csdn.net/u010649766/article/details/80582153)
 * [Go 1.5 concurrent garbage collector pacing](https://docs.google.com/document/d/1wmjrocXIWTr1JxU-3EQBI6BK6KgtiFArkG47XK73xIQ/edit#heading=h.xy314pvxblbm)
 * [What kind of Garbage Collection does Go use?](https://stackoverflow.com/questions/7823725/what-kind-of-garbage-collection-does-go-use)
+* [golang分享.pptx](https://github.com/duyanghao/Go-example/blob/master/golang%E5%88%86%E4%BA%AB.pptx)
