添加动态图
Signed-off-by: duyanghao <1294057873@qq.com>

--- a/_posts/2019-1-11-golang.md
+++ b/_posts/2019-1-11-golang.md
@@ -62,11 +62,23 @@ Go uses a concurrent collector. Go's new garbage collector is a concurrent, tr
 
 > In a `tri-color` collector, every object is either white, grey, or black and we view the heap as a graph of connected objects. At the start of a GC cycle all objects are white. The GC visits all roots, which are objects directly accessible by the application such as globals and things on the stack, and colors these grey. The GC then chooses a grey object, blackens it, and then scans it for pointers to other objects. When this scan finds a pointer to a white object, it turns that object grey. This process repeats until there are no more grey objects. At this point, white objects are known to be unreachable and can be reused.
 
+也即：
+* 起初所有对象都是白色
+* 从根出发扫描所有可达对象，标记为灰色，放入待处理队列
+* 从队列取出灰色对象，将其引用对象标记为灰色放入队列，自身标记为黑色
+* 重复 3，直到灰色对象队列为空。此时白色对象即为垃圾，进行回收
+
 And this figure will show below the Process of Golang `Garbage Collection`
 
 ![](/public/img/Golang/gc.png)
 
-An example of this process is shown below:
+可视化如下：
+
+![](/public/img/Golang/Animation_of_tri-color_garbage_collection.gif)
+
+## Golang GC Write barrier(写屏障)
+
+如上图可知，`Write barrier`(写屏障)在第一次扫描完，标记入队后，反复标记时开启写屏障，`sweep`前将写屏障关闭，这里举一个例子来说明一下`Write barrier`作用：
 
 * Stack scan
 
@@ -108,11 +120,12 @@ b->d
 
 stop the world， mark termination and sweep。 整个GC结束， b，d的内存空间都是白色，所以在sweep时会被清理掉。<font color="#dd0000">如何避免这种误清理呢？</font>
 
-写屏障(Write barrier)的功能就是在`c->b`发生时，对b标记为灰色，入队， 以及在b->d发生时，对d标记为灰色，入队，这样，在整个反复mark阶段结束时，我们能确保这段时间新发生的对白色对象的内存引用操作都被处理到（变黑），b和d就不会被误清理。写屏障在第一次扫描完，标记入队后，反复标记时开启写屏障， sweep前将写屏障关闭
+写屏障(Write barrier)的功能就是在`c->b`发生时，对b标记为灰色，入队， 以及在b->d发生时，对d标记为灰色，入队，这样，在整个反复mark阶段结束时，我们能确保这段时间新发生的对白色对象的内存引用操作都被处理到（变黑），b和d就不会被误清理
 
 简而言之，写屏障的作用是：可以确保不会有对象A直接引用白色对象B（发生时将白色对象置灰）
 
 <font color="#dd0000">Attantion: STW过程目的是Rescan globals/changed stacks, 因为mark和用户程序是并行的，所以在上一步执行的时候可能会有新的对象分配，需要Rescan再完成检查</font>
+
 
 ## Refs
 
@@ -123,3 +136,4 @@ stop the world， mark termination and sweep。 整个GC结束， b，d的内存
 * [Go 1.5 concurrent garbage collector pacing](https://docs.google.com/document/d/1wmjrocXIWTr1JxU-3EQBI6BK6KgtiFArkG47XK73xIQ/edit#heading=h.xy314pvxblbm)
 * [What kind of Garbage Collection does Go use?](https://stackoverflow.com/questions/7823725/what-kind-of-garbage-collection-does-go-use)
 * [golang分享.pptx](https://github.com/duyanghao/Go-example/blob/master/golang%E5%88%86%E4%BA%AB.pptx)
+* [Golang 垃圾回收剖析](http://legendtkl.com/2017/04/28/golang-gc/)
