添加动态图
Signed-off-by: duyanghao <1294057873@qq.com>

--- a/_posts/2019-1-11-golang.md
+++ b/_posts/2019-1-11-golang.md
@@ -82,7 +82,7 @@ And this figure will show below the Process of Golang `Garbage Collection`
 
 ## Golang GC Write barrier(写屏障)
 
-如上图可知，`Write barrier`(写屏障)在第一次扫描完，标记入队后，反复标记时开启写屏障，`sweep`前将写屏障关闭，这里举一个例子来说明一下`Write barrier`作用：
+如上图可知，`Write barrier`(写屏障)在第一次扫描完，标记入队后，反复标记时开启，`sweep`前关闭，这里举一个例子来说明一下`Write barrier`作用：
 
 * Stack scan
 
