--- a/_posts/2016-1-17-SnowMan.md
+++ b/_posts/2016-1-17-SnowMan.md
@@ -89,21 +89,21 @@ excerpt: the detailed description of the same game - SnowMan……
 
 # 参考：
 
-* https://www.raywenderlich.com/61532/unity-2d-tutorial-getting-started
-* http://anwell.me/articles/unity3d-flappy-bird/
-* http://blog.csdn.net/u014735301/article/details/42145131
-* http://blog.csdn.net/kenkao/article/details/6254133
-* http://blog.codingnow.com/oiie/oiie/
-* http://www.codeceo.com/article/10-years-of-game-programming.html
-* http://www.360doc.com/relevant/547378913_more.shtml
-* http://stackoverflow.com/questions/10192903/time-in-milliseconds/27448980#27448980
-* http://www.jb51.net/article/82795.htm
-* https://github.com/google/protobuf/issues/1237
-* https://www.codeproject.com/Articles/989447/UNITY-D-NETWORK-GAME-PROGRAMMING
-* https://github.com/yueyoum/unity3d-scripts/blob/master/networking-with-protobuf-example/NetWorking.cs
-* http://blog.1vr.cn/?p=1422
-* http://blog.csdn.net/lisonglisonglisong/article/details/25071793
-* https://unity3d.com/cn/learn/tutorials/projects/survival-shooter/player-health
-* http://hahaya.github.io/use-protobuf-in-c-plus-plus/
+* [unity-2d-tutorial-getting-started](https://www.raywenderlich.com/61532/unity-2d-tutorial-getting-started)
+* [Tutorial: How to Make Flappy Bird in Unity3D](http://anwell.me/articles/unity3d-flappy-bird)
+* [unity网络编程学习（4）与java服务器的Socket通信](http://blog.csdn.net/u014735301/article/details/42145131)
+* [C#中实现byte[]与任意对象互换(服务端通讯专用)](http://blog.csdn.net/kenkao/article/details/6254133)
+* [blog](http://blog.codingnow.com/oiie/oiie/)
+* [10-years-of-game-programming](http://www.codeceo.com/article/10-years-of-game-programming.html)
+* [手游后台PVP系统网络同步方案总结](http://www.360doc.com/relevant/547378913_more.shtml)
+* [Time in milliseconds](http://stackoverflow.com/questions/10192903/time-in-milliseconds/27448980#27448980)
+* [C#使用Protocol Buffer(ProtoBuf)进行Unity中的Socket通信](http://www.jb51.net/article/82795.htm)
+* [protobuff3.0.0 cannot use in unity3d 5.3.2 ,why?](https://github.com/google/protobuf/issues/1237)
+* [UNITY-D-NETWORK-GAME-PROGRAMMING](https://www.codeproject.com/Articles/989447/UNITY-D-NETWORK-GAME-PROGRAMMING)
+* [networking-with-protobuf-example](https://github.com/yueyoum/unity3d-scripts/blob/master/networking-with-protobuf-example/NetWorking.cs)
+* [Unity 2D入门基础教程](http://blog.1vr.cn/?p=1422)
+* [Linux下C++访问MySQL数据库](http://blog.csdn.net/lisonglisonglisong/article/details/25071793)
+* [player-health](https://unity3d.com/cn/learn/tutorials/projects/survival-shooter/player-health)
+* [C++使用protobuf(Linux下)](http://hahaya.github.io/use-protobuf-in-c-plus-plus)
 * [unity ui](http://www.cnblogs.com/Huil1993/p/5250371.html)
 * [Protocol Buffers v3.1.0 Source code (zip)](https://github.com/google/protobuf/archive/v3.1.0.zip)
