add pvp sequence diagram
Signed-off-by: duyanghao <1294057873@qq.com>

--- a/_posts/2016-1-17-SnowMan.md
+++ b/_posts/2016-1-17-SnowMan.md
@@ -63,6 +63,17 @@ excerpt: the detailed description of the same game - SnowMan……
 
 ![](/public/img/snowman/gameserver_arch.png)
 
+# 服务器pvp同步架构
+
+服务端采用`client-server`方式，以固定步长为一帧：
+
+* 客户端在一帧内(服务端同步帧)将状态改变（方向、射击、以及伤害和回血）传递给服务端
+* 服务器接受客户端数据，更新状态，并将结果同步给所有客户端
+* 客户端收到同步包后，更新客户端数据，以同步后的状态执行
+* 服务端如果在同一帧内收到多次状态改变，则合并这些状态，比如INPUT3为向右移动一格+发射雪球，INPUT4为跳起，则合并为跳起+发射雪球
+
+![](public/img/snowman/pvp_sequence.png)
+
 # 项目主要难点
 
 * 1、客户端场景UI设计与场景切换
