--- a/_posts/2017-3-1-DemoOs.md
+++ b/_posts/2017-3-1-DemoOs.md
@@ -794,4 +794,6 @@ timer_interrupt:
 
 这是定时中断处理子程序，处理逻辑是：根据current值判断是任务0（current值为0）还是任务1（current值为1），并切换到不同的任务中去！
 
-这样分析就大致完成了，欢迎提问！
+这样分析就大致完成了，欢迎提问
+
+![](/public/img/duyanghao.png)
