--- a/_posts/2020-3-30-velero.md
+++ b/_posts/2020-3-30-velero.md
@@ -14,11 +14,22 @@ Kubernetes disaster-recovery is an essential feature in the production environme
 * Kuberentes data: Kubernetes stores its state in etcd, so we can backup etcd for this purpose.
 * Application data: i.e. volumes, we want to use velero for this purpose(this is what I want to talk about in this post).
 
-Indeed, we can customize the backup method for each of applications, and that what we actually did in the past. The advantage of this approach is that we can ignore the low-level storage details while the obvious drawback is that the workload for specifying backup methods continues to increase as the number of applications grows, which makes it hard to maintain and automate the backup.      
+Indeed, we can customize the backup method for each of applications, such as `mysqldump` for `MySQL` or `MariaDB`, `bgsave` for `Redis` and so on, and that what we actually did in the past. The advantage of this approach is that we can ignore the low-level storage details while the obvious drawback is that the workload for specifying backup methods continues to increase as the number of applications grows, which makes it hard to maintain and automate the backup.      
 
-So, we want to find a way to do `bur`(backup and restore) regardless of the type of application and [Kubernetes Persistent Volume](https://kubernetes.io/docs/concepts/storage/persistent-volumes/#types-of-persistent-volumes), and velero comes into our sight.
+To solve this problem, we want to find an uniform way to do `bur`(backup and restore) regardless of the type of application and [Kubernetes Persistent Volume](https://kubernetes.io/docs/concepts/storage/persistent-volumes/#types-of-persistent-volumes), and velero comes into our sight.
 
-## How Velero Works
+## Velero Introduction
+
+Velero (formerly Heptio Ark) gives you tools to back up and restore your Kubernetes cluster resources and persistent volumes. You can run Velero with a cloud provider or on-premises. Velero lets you:
+
+* Take backups of your cluster and restore in case of loss.
+* Migrate cluster resources to other clusters.
+* Replicate your production cluster to development and testing clusters.
+
+Velero consists of:
+
+* A server that runs on your cluster
+* A command-line client that runs locally
 
 Each Velero operation -- on-demand backup, scheduled backup, restore -- is a custom resource, defined with a Kubernetes Custom Resource Definition (CRD) and stored in etcd. Velero also includes controllers that process the custom resources to perform backups, restores, and all related operations.
 
@@ -26,7 +37,7 @@ You can back up or restore all objects in your cluster, or you can filter object
 
 Velero is ideal for the disaster recovery use case, as well as for snapshotting your application state, prior to performing system operations on your cluster (e.g. upgrades).
 
-## Backup workflow
+## Velero Backup workflow
 
 When you run velero backup create test-backup:
 
@@ -244,7 +255,7 @@ Restic scans each file in a single thread. This means that large files (such as 
 
 ## Advanced research for velero with Restic Integration
 
-#### *Multiple Pods with velero restic backup annotation backend with same PersistentVolumeClaims*
+#### <font color="#dd0000">*Multiple Pods with velero restic backup annotation backend with same PersistentVolumeClaims*</font><br />
 
 velero restic will backup the `PersistentVolumeClaims` only once when there are multiple backup annotations backend with the same `PersistentVolumeClaims` as below:
 
@@ -298,15 +309,15 @@ time="2020-04-08T06:35:34Z" level=info msg="Backing up item" backup=velero/multi
 time="2020-04-08T06:35:34Z" level=info msg="Pod volume uses a persistent volume claim which has already been backed up with restic from another pod, skipping." backup=velero/multi-test group=v1 logSource="pkg/backup/item_backupper.go:198" name=nginx-deployment-7d46f5c9d-trk4b namespace=multi podVolume=nginx-logs pvcName=nginx-logs resource=pods
 ```
 
-#### *[velero-volume-controller](https://github.com/vmware-tanzu/velero/blob/master/site/docs/master/restic.md#add-backup-annotation)* 
+#### <font color="#dd0000">*[velero-volume-controller](https://github.com/vmware-tanzu/velero/blob/master/site/docs/master/restic.md#add-backup-annotation)*</font><br /> 
 
-Since one drawback of velero with Restic Integration is that we have to add relevant annotation for pods with persistent volumes by hand for backing up application data and meanwhile the velero official hasn't offered a solution yet.
+Since one drawback of velero with Restic Integration is that we have to add relevant annotation for pods with persistent volumes by hand for backing up application data and meanwhile the velero official hasn't provided a solution to backup all volume resources in the cluster yet.
 
 To solve this, I have created a repo called [velero-volume-controller](https://github.com/duyanghao/velero-volume-controller), which helps users to do this dull job automatically as below:
 
 ![](/public/img/velero/velero-volume-controller.png)  
 
-#### *Create regularly scheduled backups based on a cron expression*
+#### <font color="#dd0000">*Create regularly scheduled backups based on a cron expression*</font><br />
 
 Let's do a simple test for regularly scheduled backups:
 
@@ -321,7 +332,7 @@ backup-tutorial-20200325062029   Completed   2020-03-25 14:20:29 +0800 CST   29d
 backup-tutorial-20200325061834   Completed   2020-03-25 14:18:34 +0800 CST   29d       default            <none>
 ```
 
-#### *Switch between underlying storage providers*
+#### <font color="#dd0000">*Switch between underlying storage providers*</font><br />
 
 ```bash
 $ kubectl get sc      
@@ -347,7 +358,7 @@ As you can can, the requirements for switching between underlying storage provid
 1. Same StorageClassName 
 2. Support relevant access modes of persistent volume(i.e. RWO, ROX and RWX)
 
-#### *[Backup Big Data](https://github.com/vmware-tanzu/velero/issues/1515)*
+#### <font color="#dd0000">*[Backup Big Data](https://github.com/vmware-tanzu/velero/issues/1515)*</font><br />
 
 When backing up big data, such as 100G or more, velero backup will fail as below: 
 
@@ -440,7 +451,7 @@ Status:
 Events:             <none>
 ```
 
-#### *Backup concurrently*
+#### <font color="#dd0000">*Backup concurrently*</font><br />
 
 Right now, velevo restic has not supported running restic backups concurrently as below:
 
@@ -466,7 +477,7 @@ Restic Backups:
 
 And you can get more information about this [here](https://github.com/vmware-tanzu/velero/issues/2122). 
 
-#### *High-availability*
+#### <font color="#dd0000">*High-availability*</font><br />
 
 >> Currently, Velero does not support multiple replicas of the server.
    
@@ -474,7 +485,7 @@ And you can get more information about this [here](https://github.com/vmware-tan
    
 >> That does still leave challenges for the server loops that handle dispatching the Backup and Restores to the workers, though. Some ideas for addressing that are discussed in [#487](https://github.com/vmware-tanzu/velero/issues/487).   
 
-#### *Incremental backup*
+#### <font color="#dd0000">*Incremental backup*</font><br />
 
 ```bash
 # test1 - single big file(100G)
@@ -489,23 +500,21 @@ $ dd if=/dev/urandom of=test1G bs=1M count=1024
 
 # test2 - multiple files within one persistent volume(10W-1M files)
 # loop-1 - 10m
-# loop-2(+1m) - 17s
+# loop-2(+1M) - 17s
 $ dd if=/dev/urandom of=test1M bs=1M count=1
 # loop-3(+1G) - 17s
 $ dd if=/dev/urandom of=test1G bs=1M count=1024
 # loop-4(delete serveral files) - 18s
 # loop-5(delete all files) - 3s
-# backup data in object storage provider still remains
+# attention: backup data in object storage provider still remains
 
 # test3 - pod restart(17s)
 # test3 shows that an incremental backup chain will be maintained across pod reschedules for PVCs.
 ```
 
-#### *Delete policy*
+#### <font color="#dd0000">*Delete policy*</font><br />
 
-## delete policy
-
-`velero restic backup delete` will remove relevant backups, restores and disk snapshots，but it won't delete restic data and affect other backups
+`velero restic backup delete` will remove relevant backup, restore and disk snapshots，but it won't delete restic data or affect other backups
 
 ```bash
 $ velero backup create delete-policy-2 --include-namespaces test4
