--- a/_posts/2020-3-30-velero.md
+++ b/_posts/2020-3-30-velero.md
@@ -255,7 +255,7 @@ Restic scans each file in a single thread. This means that large files (such as 
 
 ## Advanced research for velero with Restic Integration
 
-#### <font color="#dd0000">*Multiple Pods with velero restic backup annotation backend with same PersistentVolumeClaims*</font><br />
+#### <font color="#dd0000">Multiple Pods with velero restic backup annotation backend with same PersistentVolumeClaims</font><br />
 
 velero restic will backup the `PersistentVolumeClaims` only once when there are multiple backup annotations backend with the same `PersistentVolumeClaims` as below:
 
@@ -309,7 +309,7 @@ time="2020-04-08T06:35:34Z" level=info msg="Backing up item" backup=velero/multi
 time="2020-04-08T06:35:34Z" level=info msg="Pod volume uses a persistent volume claim which has already been backed up with restic from another pod, skipping." backup=velero/multi-test group=v1 logSource="pkg/backup/item_backupper.go:198" name=nginx-deployment-7d46f5c9d-trk4b namespace=multi podVolume=nginx-logs pvcName=nginx-logs resource=pods
 ```
 
-#### <font color="#dd0000">*[velero-volume-controller](https://github.com/vmware-tanzu/velero/blob/master/site/docs/master/restic.md#add-backup-annotation)*</font><br /> 
+#### [velero-volume-controller](https://github.com/vmware-tanzu/velero/blob/master/site/docs/master/restic.md#add-backup-annotation) 
 
 Since one drawback of velero with Restic Integration is that we have to add relevant annotation for pods with persistent volumes by hand for backing up application data and meanwhile the velero official hasn't provided a solution to backup all volume resources in the cluster yet.
 
@@ -317,7 +317,7 @@ To solve this, I have created a repo called [velero-volume-controller](https://g
 
 ![](/public/img/velero/velero-volume-controller.png)  
 
-#### <font color="#dd0000">*Create regularly scheduled backups based on a cron expression*</font><br />
+#### <font color="#dd0000">Create regularly scheduled backups based on a cron expression</font><br />
 
 Let's do a simple test for regularly scheduled backups:
 
@@ -332,7 +332,7 @@ backup-tutorial-20200325062029   Completed   2020-03-25 14:20:29 +0800 CST   29d
 backup-tutorial-20200325061834   Completed   2020-03-25 14:18:34 +0800 CST   29d       default            <none>
 ```
 
-#### <font color="#dd0000">*Switch between underlying storage providers*</font><br />
+#### <font color="#dd0000">Switch between underlying storage providers</font><br />
 
 ```bash
 $ kubectl get sc      
@@ -358,7 +358,7 @@ As you can can, the requirements for switching between underlying storage provid
 1. Same StorageClassName 
 2. Support relevant access modes of persistent volume(i.e. RWO, ROX and RWX)
 
-#### <font color="#dd0000">*[Backup Big Data](https://github.com/vmware-tanzu/velero/issues/1515)*</font><br />
+#### [Backup Big Data](https://github.com/vmware-tanzu/velero/issues/1515)
 
 When backing up big data, such as 100G or more, velero backup will fail as below: 
 
@@ -451,7 +451,7 @@ Status:
 Events:             <none>
 ```
 
-#### <font color="#dd0000">*Backup concurrently*</font><br />
+#### <font color="#dd0000">Backup concurrently</font><br />
 
 Right now, velevo restic has not supported running restic backups concurrently as below:
 
@@ -477,7 +477,7 @@ Restic Backups:
 
 And you can get more information about this [here](https://github.com/vmware-tanzu/velero/issues/2122). 
 
-#### <font color="#dd0000">*High-availability*</font><br />
+#### <font color="#dd0000">High-availability</font><br />
 
 >> Currently, Velero does not support multiple replicas of the server.
    
@@ -485,7 +485,7 @@ And you can get more information about this [here](https://github.com/vmware-tan
    
 >> That does still leave challenges for the server loops that handle dispatching the Backup and Restores to the workers, though. Some ideas for addressing that are discussed in [#487](https://github.com/vmware-tanzu/velero/issues/487).   
 
-#### <font color="#dd0000">*Incremental backup*</font><br />
+#### <font color="#dd0000">Incremental backup</font><br />
 
 ```bash
 # test1 - single big file(100G)
@@ -512,7 +512,7 @@ $ dd if=/dev/urandom of=test1G bs=1M count=1024
 # test3 shows that an incremental backup chain will be maintained across pod reschedules for PVCs.
 ```
 
-#### <font color="#dd0000">*Delete policy*</font><br />
+#### <font color="#dd0000">Delete policy</font><br />
 
 `velero restic backup delete` will remove relevant backup, restore and disk snapshots，but it won't delete restic data or affect other backups
 
