--- a/_posts/2020-3-30-velero.md
+++ b/_posts/2020-3-30-velero.md
@@ -37,7 +37,7 @@ You can back up or restore all objects in your cluster, or you can filter object
 
 Velero is ideal for the disaster recovery use case, as well as for snapshotting your application state, prior to performing system operations on your cluster (e.g. upgrades).
 
-## Velero Backup workflow
+## Velero Backup Workflow
 
 When you run velero backup create test-backup:
 
@@ -391,7 +391,7 @@ Persistent Volumes: <none included>
 Restic Backups (specify --details for more information):
   Completed:  1
 
-$ podvolumebackups end with normal 'Completion' Phase  
+# podvolumebackups end with normal 'Completion' Phase  
 $ kubectl describe podvolumebackups/big-data-test-t5r76 -nvelero
 [...truncate...]
 Status:
@@ -530,7 +530,7 @@ $ velero restore create --from-backup delete-policy-3
 
 ## Conclusion
 
-This article is more like a practical guide than theory analysis and stay tuned as this evolves.  
+This article is more like a practical guide than theory analysis, stays tuned as this evolves.  
  
 ## Refs
 
